<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    android:background="@color/dark_brown"
    android:padding="8dp">

    <ImageButton
        android:id="@+id/add_to_playlist_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:background="@color/btn_bg"
        android:src="@drawable/ic_add_white_24dp"
        android:contentDescription="@string/add_to_playlist" />

        <TextView
            android:id="@+id/time_elapsed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textSize="12sp"
            android:textAlignment="center"
            android:text="@string/time_elapsed"
            android:textColor="@color/white"/>
        <SeekBar
            android:id="@+id/seek_bar_play"
            android:layout_width="0dp"
            android:layout_weight="15"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            />
    <TextView
        android:id="@+id/time_length"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:textSize="12sp"
        android:textAlignment="center"
        android:text="@string/time_elapsed"
        android:textColor="@color/white"/>

    <ImageButton
        android:id="@+id/add_to_favorites_btn"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:background="@color/btn_bg"
        android:src="@android:drawable/btn_star_big_off"
        android:contentDescription="@string/add_to_favorites" />
</LinearLayout>